cluster/envoy-gateway/gateway/03-default-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-route
  namespace: gateway
spec:
  parentRefs:
    - name: external-knative-gateway
      namespace: gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: default-direct-response
  hostnames:
    - '*.demo'
